--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:browser": "npm run compile && browserify --im test/snoowrap.spec.js -o test/_browser.spec.js -t [ babelify ] && open test/run-tests.html",
     "smoketest": "npm run test -- -g 'smoketest'",
     "build-docs": "scripts/build_docs.sh",
-    "build:babel": "babel -q -d dist/ src/",
+    "build:babel": "babel -d dist/ src/",
     "build:types": "tsc -p tsconfig.gen-dts.json",
     "bundle-size": "npm run build-docs && gzip -c doc/snoowrap-v$(npm info . version).min.js | wc -c | xargs",
     "coverage": "istanbul cover _mocha -- --require @babel/register test/snoowrap.spec.js",
